# VitaScrob

./: README.md  vitascrob.suprx
music_logger_plugin/: CMake  CMakeLists.txt  vitascrob.c
